# lionweather

./: .gitignore  BACKEND_POLLING_FIX.md  CRITICAL_BACKEND_ISSUES.md  CRITICAL_DEPLOYMENT_ISSUE.md  DEPLOYMENT_CHECKLIST.md  LOCATION_GRANULARITY_ANALYSIS.md  ML_FORECASTING_STRATEGY.md  ML_OPTIMIZATION_RESEARCH.md  ML_TRAINING_PLAN.md  NEIGHBORHOOD_LEVEL_PREDICTIONS.md  QUICK_START.md  RAILWAY_SETUP.md  README.md  TASK_EXECUTION_SUMMARY.md  URGENT_BACKEND_FIX_NEEDED.md  package-lock.json  railway.toml  weather.db
backend/: .dockerignore  .env.example  Dockerfile  FORECAST_COLLECTION_IMPLEMENTATION.md  HISTORICAL_DATA_ANALYSIS_2022_2025.md  HISTORICAL_DATA_SEEDING.md  INDONESIA_API_FIX.md  ML_MODEL_PERFORMANCE_RAINFALL.md  ML_RAINFALL_PREDICTION_MODELS.md  NEA_HISTORICAL_DATA_IMPORT_GUIDE.md  NEA_MULTI_STATION_IMPLEMENTATION_SUMMARY.md  PHASE_1_DATA_COLLECTION_STATUS.md  QUICK_START_NEA_IMPORT.md  SINGAPORE_API_FIX_SUMMARY.md  TASK_10_5_IMPLEMENTATION_SUMMARY.md  TASK_4_HISTORICAL_DATA_SEEDING_SUMMARY.md  analyze_historical_data.py  benchmark_historical.py  check_data_status.py  check_locations.py  check_training_data.py  diagnose_data_collection.py  download_nea_data.py  download_weather_data.py  fetch_external_features.py  monitor_download.py  pyproject.toml  railpack.json  railway.json  rebenchmark.py  remove_duplicates.py  requirements-dev.txt  requirements-with-hashes.txt  requirements.txt  seed_all_historical_data.py  seed_historical_data.py  seed_historical_forecasts.py  seed_multi_year_data.py  seed_nea_historical_data.py  test_forecast_collection.py  (+13 more)
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/ml/: FORECAST_BACKTEST_RESULTS.md  backtest_forecast.py  create_forecast_targets.py  data_validation.py  evaluate_rainfall_models.py  feature_engineer.py  nea_classification.py  prepare_training_data.py  register_model.py  temporal_validation.py  train_comparison_models.py  train_forecast_models.py  train_full_analysis.py  train_multiclass_classifier.py  train_rainfall_classifier.py  train_rainfall_forecast.py  train_rainfall_regressor.py  visualize_spatial_data.py
backend/models/: full_analysis.json  historical_benchmark.json  rainfall_lgbm_12h.joblib  rainfall_lgbm_1h.joblib  rainfall_lgbm_3h.joblib  rainfall_lgbm_6h.joblib
backend/tests/: COUNTEREXAMPLES_MALAYSIA_DATA_MIXING.md  COUNTEREXAMPLES_ML_DATA_LEAKAGE.md  __init__.py  conftest.py  test_alerting_service.py  test_api_locations.py  (+19 more)
(+138 files in other folders)
